# agentic-learning-app

./: .env.example  .gitignore  .python-version  CLAUDE.md  README.md  development_roadmap.md  learning_system_spec.md
.claude/: settings.json
.claude/agents/: backend-agent.md  character-agent.md  content-agent.md  flutter-agent.md  infra-agent.md
.claude/skills/session/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
backend/: Dockerfile  README.md  cache_manager.py  config.py  handoff.py  lesson_session.py  logging_config.py  main.py  pipeline.py  pyproject.toml  rate_limiter.py  scheduler.py  summary_call.py
backend/agents/: context_agent.py  help_agent.py  lesson_agent.py  summary_agent.py
backend/tests/: conftest.py  test_cache_manager.py  test_cache_manager_edge_cases.py  test_handoff.py  test_lesson_session.py  test_logging_config.py  test_rate_limiter.py  test_read_learner_concepts.py  test_scheduler.py  test_scheduler_edge_cases.py  test_session_api.py  test_session_api_edge_cases.py  test_summary_call.py
backend/tests/agents/: test_context_agent.py  test_help_agent.py  test_lesson_agent.py  test_summary_agent.py
backend/tests/integration/: check_scale_to_zero.sh  conftest.py  test_load.py  test_pipeline.py  test_session_e2e.py
backend/tests/tools/: test_get_course_structure.py  test_run_fsrs.py  test_run_fsrs_extended.py  test_run_fsrs_stability_guard.py  test_search_knowledge_base.py
backend/tools/: get_course_structure.py  run_fsrs.py  search_knowledge_base.py
content-generation/: BATCH_API_PLAN.md  CLOUD_RUN_CHECKLIST.md  Dockerfile  Dockerfile.seed  README.md  config.py  count_tokens.py  embed_content.py  generate_content.py  pyproject.toml  requirements-seed.txt  requirements.txt  review_models.py  seed_db.py  storage.py  token_usage_log.py  validate_db.py  validate_embeddings.py
content-generation/tests/: test_response_helpers.py
content/outlines/: linux_basics_outlines.yaml
courses/linux-basics/: concept_map.json  course_structure_summary.md
courses/linux-basics/prompts/: combined_generation.md  generate_concept_map.md  generate_outlines.md  lesson_generation.md  lesson_review.md  quiz_generation.md  quiz_review.md
dev_chat/: README.md  app.py  pyproject.toml
docs/: FLUTTER_BUILD_GUIDE.md  ON_DEVICE_LLM_PLAN.md  flutter-dev-setup.md
infra/cloudbuild/: backend.yaml  content-generate.yaml  content-seed.yaml
infra/monitoring/: README.md  dashboard.json  setup_metrics.sh
infra/scripts/: apply_schema.sh  enable_apis.sh  enable_pgvector.sh  push_secrets.sh  teardown.sh  tf.sh
infra/sql/: 001_create_schema.sql
infra/sql/archive/: 002_add_content_hash.sql
infra/terraform/: .terraform.lock.hcl  artifact_registry.tf  auth.tf  cloudsql.tf  firebase.tf  main.tf  outputs.tf  variables.tf
