[project]
name = "agentic-learning-backend"
version = "0.1.0"
description = "Google ADK agents and tools for the agentic learning app"
# Keep in sync with /.python-version
requires-python = "==3.13.*"
dependencies = [
    "google-adk>=1.0.0",
    "psycopg2-binary>=2.9",
    "google-cloud-firestore>=2.0",
    "ruff>=0.0.1",
    "pytest>=7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
