[project]
name = "agentic-learning-backend"
version = "0.1.0"
description = "Agentic learning backend — direct Gemini SDK, Firestore, Cloud Run"
# Keep in sync with /.python-version
requires-python = "==3.13.*"
dependencies = [
    "google-cloud-firestore>=2.0",
    "google-cloud-storage>=2.0",
    "google-genai>=1.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.0",
    "google-cloud-secret-manager>=2.0",
    "pyyaml>=6.0",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-gcp-trace>=1.6",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-propagator-gcp>=1.6",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.14",
    "ruff>=0.15.7",
    "ty>=0.0.1a6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (not skipped by default)",
]
