[project]
name = "agentic-learning-content-generation"
version = "0.1.0"
description = "Content generation pipeline for the agentic learning app"
requires-python = "==3.13.*"
dependencies = [
    "google-genai>=1.0.0",
    "google-auth>=2.0.0",
    "pyyaml>=6.0",
    "pydantic-settings>=2.0",
    "tiktoken>=0.12.0",
]

[project.optional-dependencies]
# GCS backend — required when GCS_PIPELINE_BUCKET is set (i.e. on Cloud Run).
# Not needed for local development.
gcs = [
    "google-cloud-storage>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "ruff>=0.15.7",
    "ty>=0.0.1a6",
]

[tool.setuptools]
py-modules = [
    "config",
    "storage",
    "review_models",
    "token_usage_log",
    "generate_content",
    "count_tokens",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
