[project]
name = "agentic-learning-devchat"
version = "0.1.0"
description = "Streamlit dev interface for testing the agentic learning pipeline"
requires-python = "==3.13.*"
dependencies = [
    "streamlit>=1.35.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
